restrictions.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-sni-for-port-443
spec:
  validationFailureAction: Enforce
  rules:
    - name: validate-servernames-for-port-443
      match:
        resources:
          kinds:
            - cilium.io/v2/CiliumNetworkPolicy
      validate:
        message: "Each 'toPorts' entry with port '443' must specify a non-empty 'serverNames'."
        foreach:
          - list: "request.object.spec.egress[].toPorts[]"
            preconditions:
              all:
                - key: "{{ element.ports[].port }}"
                  operator: AnyIn
                  value: ["443"]
            deny:
              conditions:
                any:
                  - key: "{{ element.serverNames  || `[]` }}"
                    operator: Equals
                    value: null
                  - key: "{{ length(element.serverNames  || `[]` ) }}"
                    operator: Equals
                    value: 0
